riscv-rt/tests/ui/exception/fail_impl_exception_number.rs
#[riscv_rt::exception(riscv::interrupt::Interrupt::SupervisorSoft)]
fn my_exception() {}

fn main() {}
